k8s/notification-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  namespace: helep
spec:
  selector:
    app: notification-service
  ports:
    - port: 8004
      targetPort: 8004
  type: ClusterIP
